 local-mem-scratch.bsv     Locally Modified          177 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/ddr2-sdram
 ddr2-sdram-device.bsv     Locally Modified          177 

Directory modules/bluespec/librl
 libfpga-bsv.awb           Locally Removed           178 

Directory modules/bluespec/librl/storage
 fifos.bsv                 Locally Modified          178 

Directory modules/bluespec/librl/storage/cache
 fpga-set-assoc-cache.bsv  Locally Modified          178 
 libfpga-cache.awb         Locally Removed           178 
 librl-cache.awb           Locally Added               - 

Directory modules/bluespec/librl/storage
 libfpga-bsv-storage.awb   Locally Removed           178 
 librl-bsv-storage.awb     Locally Added               - 

Directory modules/bluespec/librl
 librl-bsv.awb             Locally Added               - 
 libfpga-bsv.bsh           Locally Removed           178 
 librl-bsv.bsh             Locally Added               - 

Directory modules/bluespec/librl/base
 libfpga-bsv-base.awb      Locally Removed           178 
 librl-bsv-base.awb        Locally Added               - 
 memory-pack.bsv           Locally Modified          178 

Rename libfpga to librl.

----------
mcadler     Date: Tue Mar 24 20:59:19 EDT 2009  CSN: CSN-platforms-180
                  Wed Mar 25 00:59:19 UTC 2009


Directory modules/bluespec/common/fpgaenv/low-level-platform-interface/local-mem
 local-mem-ddr2.bsv        Locally Modified          179 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/local
 local-mem-scratch.bsv     Locally Modified          179 

- Guarantee that scratchpad memory always starts filled with 0.  This will
  be an especially useful default value with hybrid scratchpads, since
  anonymous mmap regions are guaranteed zero.
- Fix a timing problem in the local memory DDR2 interface that allowed
  loads to go around stores.

  
